更新博客分类功能